base functionality added

--- a/app/templates/components/password-toggle.hbs
+++ b/app/templates/components/password-toggle.hbs
@@ -1,1 +1,2 @@
-<div id="nick">Toran Billups</div>
+<button class="ember-password-toggle-btn" type="button" tabindex="-1" data-click="pw-btn" data-pw="show">Show</button>
+<input id="ember-password-toggle-input" type="password" />
