--- a/app/templates/components/password-toggle.hbs
+++ b/app/templates/components/password-toggle.hbs
@@ -1,2 +1,19 @@
-<button class="ember-password-toggle-btn" type="button" tabindex="-1" data-click="pw-btn" data-pw="show">Show</button>
-<input id="ember-password-toggle-input" type="password" />
+<div class="ember-password-toggle-wrapper">
+  <button class="ember-password-toggle-btn" type="button" tabindex="-1" data-click="pw-btn" data-pw="show">Show</button>
+  <input id="ember-password-toggle-input" data-pw="pw-password" type="password" />
+</div>
+
+<div class="ember-password-toggle-wrapper">
+  <button class="ember-password-toggle-btn" type="button" tabindex="-1" data-click="pw-btn" data-pw="show">Show</button>
+  <input id="ember-password-toggle-input" data-pw="pw-password" type="password" />
+</div>
+
+<div class="ember-password-toggle-wrapper">
+  <button class="ember-password-toggle-btn" type="button" tabindex="-1" data-click="pw-btn" data-pw="show">Show</button>
+  <input id="ember-password-toggle-input" data-pw="pw-password" type="password" />
+</div>
+
+<div class="ember-password-toggle-wrapper">
+  <button class="ember-password-toggle-btn" type="button" tabindex="-1" data-click="pw-btn" data-pw="show">Show</button>
+  <input id="ember-password-toggle-input" data-pw="pw-password" type="password" />
+</div>
