updates for binding value to the password input, added styles and added CSS file to import path

--- a/app/templates/components/password-toggle.hbs
+++ b/app/templates/components/password-toggle.hbs
@@ -1,19 +1,4 @@
 <div class="ember-password-toggle-wrapper">
   <button class="ember-password-toggle-btn" type="button" tabindex="-1" data-click="pw-btn" data-pw="show">Show</button>
-  <input id="ember-password-toggle-input" data-pw="pw-password" type="password" />
-</div>
-
-<div class="ember-password-toggle-wrapper">
-  <button class="ember-password-toggle-btn" type="button" tabindex="-1" data-click="pw-btn" data-pw="show">Show</button>
-  <input id="ember-password-toggle-input" data-pw="pw-password" type="password" />
-</div>
-
-<div class="ember-password-toggle-wrapper">
-  <button class="ember-password-toggle-btn" type="button" tabindex="-1" data-click="pw-btn" data-pw="show">Show</button>
-  <input id="ember-password-toggle-input" data-pw="pw-password" type="password" />
-</div>
-
-<div class="ember-password-toggle-wrapper">
-  <button class="ember-password-toggle-btn" type="button" tabindex="-1" data-click="pw-btn" data-pw="show">Show</button>
-  <input id="ember-password-toggle-input" data-pw="pw-password" type="password" />
+  {{input value="password" type="password" class="ember-password-toggle-input"}}
 </div>
