added text-input class to input for better out of the box styling

--- a/app/templates/components/password-toggle.hbs
+++ b/app/templates/components/password-toggle.hbs
@@ -1,4 +1,4 @@
 <div class="ember-password-toggle-wrapper">
   <button class="ember-password-toggle-btn" type="button" tabindex="-1" data-click="pw-btn" data-pw="show">Show</button>
-  {{input value=password type="password" class="ember-password-toggle-input"}}
+  {{input value=password type="password" class="ember-password-toggle-input text-input"}}
 </div>
