--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,4 +1,4 @@
 <h2 id="title">Welcome to Ember.js</h2>
-{{password-toggle password=model.password class="password wat" focus=true}}
+{{password-toggle password=model.password clazz="password wat" focus=true}}
 
 {{outlet}}
