[FEATURE]: adding the ability to customize each elements class attribute
This resulted in a new version 1.0.0.

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,4 +1,5 @@
 <h2 id="title">Welcome to Ember.js</h2>
-{{password-toggle password=model.password clazz="password wat" focus=true}}
+{{password-toggle password=model.password wrapperClass="wrapperPassword1" buttonClass="buttonPassword1" inputClass="text-input password1" focus=true}}
+{{password-toggle password=model.confirmPassword wrapperClass="wrapperPassword2" buttonClass="buttonPassword2" inputClass="text-input confirm-password2"}}
 
 {{outlet}}
