--- a/app/templates/components/password-toggle.hbs
+++ b/app/templates/components/password-toggle.hbs
@@ -1,4 +1,4 @@
-<div class="ember-password-toggle-wrapper">
-  <button class="ember-password-toggle-btn" type="button" tabindex="-1" data-click="pw-btn" data-pw="show">Show</button>
-  {{input value=password type="password" class=classes}}
+<div {{bind-attr class=wrapperClazz}}>
+  <button {{bind-attr class=buttonClazz}} type="button" tabindex="-1" data-click="pw-btn" data-pw="show">Show</button>
+  {{input value=password type="password" class=inputClazz}}
 </div>
