[FEATURE] adding the ability to set id on the input

--- a/app/templates/components/password-toggle.hbs
+++ b/app/templates/components/password-toggle.hbs
@@ -1,4 +1,4 @@
 <div {{bind-attr class=wrapperClazz}}>
   <button {{bind-attr class=buttonClazz}} type="button" tabindex="-1" data-click="pw-btn" data-pw="show">Show</button>
-  {{input value=password type="password" class=inputClazz tabindex=tabindex}}
+  {{input value=password type="password" id=inputId class=inputClazz tabindex=tabindex}}
 </div>
