autocomplete: adding ability to set custom autocomplete attribute

--- a/app/templates/components/password-toggle.hbs
+++ b/app/templates/components/password-toggle.hbs
@@ -1,4 +1,4 @@
 <div class={{wrapperClazz}}>
   <button class={{buttonClazz}} type="button" tabindex="-1" data-click="pw-btn" data-pw="show">Show</button>
-  {{input value=password type="password" id=inputId class=inputClazz tabindex=tabindex}}
+  {{input value=password type="password" id=inputId class=inputClazz tabindex=tabindex autocomplete=autocomplete}}
 </div>
