--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,5 +1,5 @@
 <h2 id="title">Welcome to Ember.js</h2>
-{{password-toggle password=model.password wrapperClass="wrapperPassword1" buttonClass="buttonPassword1" inputClass="text-input password1" focus=true autocomplete="new-password"}}
+{{password-toggle password=model.password wrapperClass="wrapperPassword1" buttonClass="buttonPassword1" inputClass="text-input password1" focus=true}}
 {{password-toggle tabindex=3 inputId="password" maxlength=10 password=model.confirmPassword wrapperClass="wrapperPassword2" buttonClass="buttonPassword2" inputClass="text-input confirm-password2"}}
 {{password-toggle inputId="passwordWithAction" password=model.anything wrapperClass="wrapperPassword2" buttonClass="buttonPassword2" action="triggerAction" inputClass="text-input confirm-password3"}}
 
