refactor the password-toggle component

--- a/app/templates/components/password-toggle.hbs
+++ b/app/templates/components/password-toggle.hbs
@@ -1,4 +1,22 @@
-<div class={{wrapperClazz}}>
-  <button class={{buttonClazz}} type="button" tabindex="-1" data-click="pw-btn" data-pw="show">Show</button>
-  {{input value=password type="password" id=inputId class=inputClazz tabindex=tabindex maxlength=maxlength autocomplete=autocomplete placeholder=placeholder}}
+<div class="ember-password-toggle-wrapper {{wrapperClass}}">
+  <button
+    class="ember-password-toggle-btn {{buttonClass}}"
+    type="button"
+    tabindex="-1"
+    data-click="pw-btn"
+    data-pw="show">Show</button>
+
+    {{#if hasBlock}}
+      {{yield}}
+    {{else}}
+      <input
+      type={{type}}
+      id={{inputId}}
+      class="ember-password-toggle-input {{inputClass}}"
+      tabindex={{tabindex}}
+      autocomplete={{autocomplete}}
+      placeholder={{placeholder}}
+      oninput={{action (mut password) value="target.value"}}
+      maxlength={{maxlength}}>
+    {{/if}}
 </div>
