--- a/addon/templates/components/password-toggle.hbs
+++ b/addon/templates/components/password-toggle.hbs
@@ -2,9 +2,10 @@
   <button
     class="ember-password-toggle-btn {{buttonClass}}"
     type="button"
+    onclick={{action "toggleInputType"}}
     tabindex="-1"
     data-click="pw-btn"
-    data-pw="show">Show</button>
+    data-pw="show">{{if isTypeText "Hide" "Show"}}</button>
 
     {{#if hasBlock}}
       {{yield}}
@@ -14,9 +15,16 @@
       id={{inputId}}
       class="ember-password-toggle-input {{inputClass}}"
       tabindex={{tabindex}}
-      autocomplete={{autocomplete}}
       placeholder={{placeholder}}
+      value={{password}}
       oninput={{action (mut password) value="target.value"}}
-      maxlength={{maxlength}}>
+      maxlength={{maxlength}}
+      autofocus={{autofocus}}
+
+      autocapitalize={{autocapitalize}}
+      autocomplete={{autocomplete}}
+      autocorrect={{autocorrect}}
+      spellcheck={{spellcheck}}
+      >
     {{/if}}
 </div>
